--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ nbproject/genfiles.properties
 nbproject/private/private.properties
 nbproject/project.properties
 nbproject/project.xml
+/build/
+nbproject/private/private.xml
